update security config to remove teh conflict error